[package]
name = "exacttime"
version = "0.1.0"
edition = "2021"
description = "cross-platform command-line tool to get the exact time"
license = "MIT"
repository = "https://github.com/gteditor99/exacttime"

[dependencies]
chrono = "0.4"
colored = "2.0"
scraper = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
